--- a/demo-app-chart/templates/python-deployment.yaml
+++ b/demo-app-chart/templates/python-deployment.yaml
@@ -18,3 +18,18 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         ports:
         - containerPort: {{ .Values.service.targetPort }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "demo-app-chart.fullname" . }}-service
+spec:
+  type: {{ .Values.service.type }}
+  selector:
+    app: {{ include "demo-app-chart.name" . }}
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
+      nodePort: {{ .Values.service.nodePort }}
+
