--- a/demo-app-chart/templates/redis-deployment.yaml
+++ b/demo-app-chart/templates/redis-deployment.yaml
@@ -1,33 +1,34 @@
-# demo-app-chart/templates/redis-deployment-and-service.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "demo-app-chart.fullname" . }}-redis
+  name: {{ include "demo-app-chart.fullname" . }}-redis-cluster
 spec:
   replicas: {{ .Values.redis.replicaCount }}
   selector:
     matchLabels:
-      app: redis
+      app: {{ include "demo-app-chart.name" . }}-redis
   template:
     metadata:
       labels:
-        app: redis
+        app: {{ include "demo-app-chart.name" . }}-redis
     spec:
       containers:
-      - name: redis
+      - name: redis-container
         image: "{{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}"
         ports:
-        - containerPort: 6379
+        - containerPort: {{ .Values.redis.service.port }}
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "demo-app-chart.fullname" . }}-redis-service
+  name: {{ include "demo-app-chart.fullname" . }}-redis-cluster-service
 spec:
   type: ClusterIP
   selector:
-    app: redis
+    app: {{ include "demo-app-chart.name" . }}-redis
   ports:
     - protocol: TCP
-      port: 6379
-      targetPort: 6379
+      port: {{ .Values.redis.service.port }}
+      targetPort: {{ .Values.redis.service.targetPort }}
