--- a/demo-app-chart/values.yaml
+++ b/demo-app-chart/values.yaml
@@ -14,7 +14,7 @@ redis:
   replicaCount: 1
   image:
     repository: redis
-    tag: v20250808112833
+    tag: latest
   service:
     port: 6379
     targetPort: 6379
