--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -17,3 +17,10 @@ spec:
         image: tanish0510/demo-app:v20250807090709
         ports:
         - containerPort: 5000
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
